crates/core/project-graph/tests/snapshots/project_graph_test__to_dot__renders_partial_tree.snap
---
source: crates/core/project-graph/tests/project_graph_test.rs
assertion_line: 244
expression: graph.to_dot()
---
digraph {
    0 [ label="c" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="b" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 -> 0 [ arrowhead=box, arrowtail=box]
}

