crates/core/project-graph/tests/snapshots/project_graph_test__to_dot__renders_tree.snap
---
source: crates/core/project-graph/tests/project_graph_test.rs
assertion_line: 215
expression: graph.to_dot()
---
digraph {
    0 [ label="c" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="b" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="a" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    3 [ label="d" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 -> 0 [ arrowhead=box, arrowtail=box]
    2 -> 1 [ arrowhead=box, arrowtail=box]
    3 -> 0 [ arrowhead=box, arrowtail=box]
    3 -> 1 [ arrowhead=box, arrowtail=box]
    3 -> 2 [ arrowhead=box, arrowtail=box]
}

